@@ -1,3 +1,7 @@
+2007-05-10	tsch
+
+	* t/CairoSurface.t: For now, skip tests that make cairo crash.
+
 2007-05-06	tsch
 
 	* Cairo.pm: Document new API.  Mark functions that were added
